Messages were changed in JS Code Gen which caused some tests and cmp files to be updated

--- a/AmbrosiaTest/JSCodeGen/ambrosiaConfig.json
+++ b/AmbrosiaTest/JSCodeGen/ambrosiaConfig.json
@@ -13,6 +13,7 @@
     "debugTestUpgrade": false,
     "appVersion": 0,
     "upgradeVersion": 0,
+    "activeCode": "VCurrent",
     "lbOptions": 
     {
         "deleteLogs": true, 
