Updated path tests to run Net461 and Net3.1 from different locations. Matches what gets installed when built

--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -24,13 +24,14 @@
 
 		<add key="TestLocalInstanceExeWorkingDirectory" value="..\..\..\..\..\TestLocalService\bin\Release" />
 		<add key="TestCMPDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\Cmp" />
-		<add key="AmbrosiaLogDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
+		<add key="AmbrosiaLogDirectory" value="..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
+		<add key="AmbrosiaInProcLogDirectory" value="..\..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
 		<!-- NOTE: InProc log files are relative to PTI. This directory is relative path from PerTestJobExeWorkingDirectory -->
-		<add key="PTIAmbrosiaLogDirectory" value="..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
-		<add key="TTDAmbrosiaLogDirectory" value="..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
+		<add key="PTIAmbrosiaLogDirectory" value="..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
+		<add key="TTDAmbrosiaLogDirectory" value="..\..\..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
 
 		<!-- NOTE: Ambrosia Javascript specific values -->
-		<add key="AmbrosiaJSCodeGenDirectory" value="..\..\..\..\JSTest" />
+		<add key="AmbrosiaJSTestDirectory" value="..\..\..\..\JSTest" />
 		<add key="AmbrosiaJSDirectory" value="D:\Franklin\AmbrosiaJS" /> 
 
 	</appSettings>
