--- a/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
+++ b/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Windows.Forms">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActiveActive_Test.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="InProc_TCP_Test.cs" />
     <Compile Include="JS_CodeGen_Neg_Tests.cs" />
     <Compile Include="JS_CodeGen_Tests.cs" />
+    <Compile Include="JS_PTI_BasicUnitTests.cs" />
     <Compile Include="MTF_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="JS_Tests.cs" />
@@ -112,19 +114,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeCoverage">
-      <Version>16.6.1</Version>
+      <Version>16.11.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk">
-      <Version>16.6.1</Version>
+      <Version>16.11.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.TestHost">
-      <Version>16.6.1</Version>
+      <Version>16.11.0</Version>
     </PackageReference>
     <PackageReference Include="MSTest.TestAdapter">
-      <Version>2.1.2</Version>
+      <Version>2.2.5</Version>
     </PackageReference>
     <PackageReference Include="MSTest.TestFramework">
-      <Version>2.1.2</Version>
+      <Version>2.2.5</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
