JS_VerifyTimeTravelDebugging has the basics working and first Basic End to End unit test for JS PTI is implemented

--- a/AmbrosiaTest/JSTest/ambrosiaConfigGOLD.json
+++ b/AmbrosiaTest/JSTest/ambrosiaConfigGOLD.json
@@ -16,7 +16,7 @@
     "activeCode": "VCurrent",
     "lbOptions": 
     {
-        "deleteLogs": true, 
+        "deleteLogs": false, 
         "deleteRemoteCRAConnections": false,
         "outputLogDestination": "ConsoleAndFile",
         "outputLogFolder": "./outputLogs",
