Added JS Giant Message tests as well as utilty funtion to be able to modify the ambrosiaConfig.json file

--- a/AmbrosiaTest/JSTest/ambrosiaConfigGOLD.json
+++ b/AmbrosiaTest/JSTest/ambrosiaConfigGOLD.json
@@ -24,6 +24,7 @@
         "allowDisplayOfRpcParams": true,
         "allowPostMethodTimeouts": true,
         "enableTypeScriptStackTraces": true,
-        "messageBytePoolSizeInMB": 2
+        "messageBytePoolSizeInMB": 2,
+        "maxMessageQueueSizeInMB": 64
     }
 }
