Added JS Giant Check point and JS Fixed Message Tests

--- a/AmbrosiaTest/JSTest/ambrosiaConfigGOLD.json
+++ b/AmbrosiaTest/JSTest/ambrosiaConfigGOLD.json
@@ -14,6 +14,9 @@
     "appVersion": 0,
     "upgradeVersion": 0,
     "activeCode": "VCurrent",
+    "icLogStorageType": "Files",
+    "isActiveActive": false,
+    "replicaNumber": 0,
     "lbOptions": 
     {
         "deleteLogs": false, 
