Added basic tests for Two Proc (one for client and one for server)

--- a/AmbrosiaTest/JSTest/ambrosiaConfigGOLD.json
+++ b/AmbrosiaTest/JSTest/ambrosiaConfigGOLD.json
@@ -1,33 +1,32 @@
 {
-    "$schema": "./ambrosiaConfig-schema.json",
-    "autoRegister": true,
-    "instanceName": "INSTANCE_NAME",
-    "icCraPort": 2520,
-    "icReceivePort": 2020,
-    "icSendPort": 2021,
-    "icLogFolder": "LOG_FOLDER",
-    "icBinFolder": "BIN_FOLDER",
-    "useNetCore": false,
-    "logTriggerSizeInMB": 256,
-    "debugStartCheckpoint": 0,
-    "debugTestUpgrade": false,
-    "appVersion": 0,
-    "upgradeVersion": 0,
-    "activeCode": "VCurrent",
-    "icLogStorageType": "Files",
-    "isActiveActive": false,
-    "replicaNumber": 0,
-    "lbOptions": 
-    {
-        "deleteLogs": false, 
-        "deleteRemoteCRAConnections": false,
-        "outputLogDestination": "ConsoleAndFile",
-        "outputLogFolder": "./outputLogs",
-        "outputLoggingLevel": "Minimal",
-        "allowDisplayOfRpcParams": true,
-        "allowPostMethodTimeouts": true,
-        "enableTypeScriptStackTraces": true,
-        "messageBytePoolSizeInMB": 2,
-        "maxMessageQueueSizeInMB": 64
-    }
+  "$schema": "./ambrosiaConfig-schema.json",
+  "autoRegister": true,
+  "instanceName": "INSTANCE_NAME",
+  "icCraPort": 2520,
+  "icReceivePort": 2020,
+  "icSendPort": 2021,
+  "icLogFolder": "LOG_FOLDER",
+  "icBinFolder": "BIN_FOLDER",
+  "useNetCore": false,
+  "logTriggerSizeInMB": 256,
+  "debugStartCheckpoint": 0,
+  "debugTestUpgrade": false,
+  "appVersion": 0,
+  "upgradeVersion": 0,
+  "activeCode": "VCurrent",
+  "icLogStorageType": "Files",
+  "isActiveActive": false,
+  "replicaNumber": 0,
+  "lbOptions": {
+    "deleteLogs": false,
+    "deleteRemoteCRAConnections": false,
+    "outputLogDestination": "ConsoleAndFile",
+    "outputLogFolder": "./outputLogs",
+    "outputLoggingLevel": "Minimal",
+    "allowDisplayOfRpcParams": true,
+    "allowPostMethodTimeouts": true,
+    "enableTypeScriptStackTraces": true,
+    "messageBytePoolSizeInMB": 2,
+    "maxMessageQueueSizeInMB": 64
+  }
 }
