--- a/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
+++ b/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
@@ -83,6 +83,7 @@
     <Compile Include="JS_CodeGen_Tests.cs" />
     <Compile Include="JS_PTI_BasicUnitTests.cs" />
     <Compile Include="JS_Blob_Tests.cs" />
+    <Compile Include="JS_Restart_Tests.cs" />
     <Compile Include="MTF_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="JS_Tests.cs" />
