Finished up the JS Upgrade Server tests

--- a/AmbrosiaTest/JSTest/ambrosiaConfigGOLD.json
+++ b/AmbrosiaTest/JSTest/ambrosiaConfigGOLD.json
@@ -12,6 +12,7 @@
   "debugStartCheckpoint": 0,
   "debugTestUpgrade": false,
   "appVersion": 0,
+  "upgradeVersion": 0,
   "activeCode": "VCurrent",
   "icLogStorageType": "Files",
   "isActiveActive": false,
