Updated JS Tests to match the app folder change of PTI to PTI-Node

--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,4 @@ CodeGenDependencies
 /AmbrosiaTest/JSTest/PTI
 /AmbrosiaTest/JSTest/out
 /AmbrosiaTest/JSTest/ambrosiaConfig.json.old
+/AmbrosiaTest/JSTest/PTI-Node
