Updated JS Cmp Files to match change, started JS Active Active tests and updated a couple non JS to have a different LogTriggerSize than default of 1000 that all tests use

--- a/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
+++ b/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
@@ -84,6 +84,7 @@
     <Compile Include="JS_BasicUnitTests.cs" />
     <Compile Include="JS_Blob_Tests.cs" />
     <Compile Include="JS_HostingMode_Tests.cs" />
+    <Compile Include="JS_ActiveActive_Tests.cs" />
     <Compile Include="JS_Restart_Tests.cs" />
     <Compile Include="MTF_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
