Added test  AMB_Verify_OrigLog_Test() which verifies the original log format can be read using new ambrosia bits

--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -20,6 +20,7 @@
     <add key="AsyncPerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Client\bin\x64\Debug\" />
     <add key="AsyncPerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Server\bin\x64\Debug\" />
     <add key="TestLocalInstanceExeWorkingDirectory" value="..\..\..\..\..\TestLocalService\bin\Release" />
+	<add key="TestRootDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest" />
     <add key="TestCMPDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\Cmp" />
     <add key="AmbrosiaLogDirectory" value="..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
     <add key="AmbrosiaInProcLogDirectory" value="..\..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
