Updated JS test environment to work with new location of JS PTI

--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -27,8 +27,10 @@
     <!-- NOTE: InProc log files are relative to PTI. This directory is relative path from PerTestJobExeWorkingDirectory -->
     <add key="PTIAmbrosiaLogDirectory" value="..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
     <add key="TTDAmbrosiaLogDirectory" value="..\..\..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
-    <!-- NOTE: Ambrosia Javascript specific values -->
-    <add key="AmbrosiaJSTestDirectory" value="..\..\..\..\JSTest" />
+    <!-- NOTE: Ambrosia Javascript LB specific values -->
+	<add key="AmbrosiaJSTestDirectory" value="..\..\..\..\JSTest" />
+	<add key="AmbrosiaJSPTIDirectory" value="..\..\..\..\..\Clients\AmbrosiaJS\PTI-Node" />
+
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <runtime>
