Prevent lib/tsconfig.tsbuildinfo from being included in the ambrosia-node package.

--- a/Clients/AmbrosiaJS/Ambrosia-Node/package.json
+++ b/Clients/AmbrosiaJS/Ambrosia-Node/package.json
@@ -10,7 +10,9 @@
   },
   "files": [
     "/src/**",
-    "/lib/**",
+    "/lib/**/*.js",
+    "/lib/**/*.ts",
+    "/lib/**/*.map",
     "ambrosiaConfig.json",
     "ambrosiaConfig-schema.json",
     "postInstall.js",
