Updated Log Dir

--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -22,7 +22,7 @@
     <add key="TestLocalInstanceExeWorkingDirectory" value="..\..\..\..\..\TestLocalService\bin\Release" />
 	<add key="TestRootDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest" />
     <add key="TestCMPDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\Cmp" />
-    <add key="AmbrosiaLogDirectory" value="..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
+    <add key="AmbrosiaLogDirectory" value="..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
     <add key="AmbrosiaInProcLogDirectory" value="..\..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
     <!-- NOTE: InProc log files are relative to PTI. This directory is relative path from PerTestJobExeWorkingDirectory -->
     <add key="PTIAmbrosiaLogDirectory" value="..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
