Sizable change to test environment as simplified the paths in app.config quite a bit. Required changes to utility methods and tests.

--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -4,32 +4,22 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <!-- These exes are built elsewhere and so just copy to the working directory of the tests - allows to use different builds and tests aren't hard code to specific sln -->
-    <!--   <add key = "AMBExeWorkingDirectory" value="..\..\..\..\..\Ambrosia\Ambrosia\bin\x64\Release" />-->
-    <!--   <add key = "ImmCoordExeWorkingDirectory" value="..\..\..\..\..\ImmCoord\ImmortalCoordinator\bin\x64\Release" />-->
-    <!-- NOTE!  Change these to match your configuration -->
-    <!-- The relative path of Log dir will be messed up (can't set relative path in process when calling exe from different location) -->
-    <!-- can't get these relative paths working when logging from job.exe and server.exe -->
-    <!-- <add key="TestLogOutputDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\Log" /> -->
-    <add key="TestLogOutputDirectory" value="C:\AmbrosiaTest\Log" />
+    <!-- NOTE!  All of these logs are based off baseAmbrosiaPath variable that is defined in TestInitialize()  -->
+    <!--        if source code is at c:\Ambrosia\AmbrosiaTest etc, baseAmbrosiaPath will = c:\Ambrosia\ and that is used as the base for all the paths below  -->
+    <!--        These should NOT have a '\' at the beginning as that is part of the base path  -->
+    <add key="TestLogOutputDirectory" value="AmbrosiaTest\Log" />
     <!-- NOTE: based on the flag NetFrameworkTestRun in Utilities.cs either net46 or netcoreapp3.1 will be appended to path ” -->
-    <add key="PerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Client\bin\x64\Release\" />
-    <add key="PerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Server\bin\x64\Release\" />
-    <!-- NOTE: PT must be deployed as “Debug” due to “state machine changes and our magic library doesn’t work anymore” -->
-    <!-- NOTE: based on the flag NetFrameworkTestRun in Utilities.com either net46 or netcoreapp3.1 will be appended to path ” -->
-    <add key="AsyncPerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Client\bin\x64\Debug\" />
-    <add key="AsyncPerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Server\bin\x64\Debug\" />
-    <add key="TestLocalInstanceExeWorkingDirectory" value="..\..\..\..\..\TestLocalService\bin\Release" />
-	<add key="TestRootDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest" />
-    <add key="TestCMPDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\Cmp" />
-    <add key="AmbrosiaLogDirectory" value="..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
-    <add key="AmbrosiaInProcLogDirectory" value="..\..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
-    <!-- NOTE: InProc log files are relative to PTI. This directory is relative path from PerTestJobExeWorkingDirectory -->
-    <add key="PTIAmbrosiaLogDirectory" value="..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
-    <add key="TTDAmbrosiaLogDirectory" value="..\..\..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
-    <!-- NOTE: Ambrosia Javascript LB specific values -->
-	<add key="AmbrosiaJSTestDirectory" value="..\..\..\..\JSTest" />
-	<add key="AmbrosiaJSPTIDirectory" value="..\..\..\..\..\Clients\AmbrosiaJS\PTI-Node" />
+    <add key="PerfTestJobExeWorkingDirectory" value="InternalImmortals\PerformanceTestInterruptible\Client\bin\x64\Release\" />
+    <add key="PerfTestServerExeWorkingDirectory" value="InternalImmortals\PerformanceTestInterruptible\Server\bin\x64\Release\" />
+    <add key="AsyncPerfTestJobExeWorkingDirectory" value="InternalImmortals\PerformanceTest\Client\bin\x64\Debug\" />
+    <add key="AsyncPerfTestServerExeWorkingDirectory" value="InternalImmortals\PerformanceTest\Server\bin\x64\Debug\" />
+	<add key="TestRootDirectory" value="AmbrosiaTest\AmbrosiaTest" />
+    <add key="TestCMPDirectory" value="AmbrosiaTest\AmbrosiaTest\Cmp" />
+    <add key="AmbrosiaLogDirectory" value="AmbrosiaTest\AmbrosiaLogs" />
+
+	  <!-- NOTE: Ambrosia Javascript LB specific values -->
+	<add key="AmbrosiaJSTestDirectory" value="AmbrosiaTest\JSTest" />
+	<add key="AmbrosiaJSPTIDirectory" value="Clients\AmbrosiaJS\PTI-Node" />
 
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
